--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -93,8 +93,8 @@
 	line-height: 32px;
 }
 
-button,
-button:visited {
+.button,
+.button:visited {
 	width: 100%;
 	max-width: 240px;
 	padding: 1rem;
@@ -108,8 +108,8 @@ button:visited {
 	box-sizing: border-box;
 }
 
-button,
-button:visited {
+.button,
+.button:visited {
 	background: #f300b4;
 	border: 1px solid transparent;
 	color: #fafafa;
@@ -117,7 +117,7 @@ button:visited {
 	outline: none;
 }
 
-button:hover {
+.button:hover {
 	background: transparent;
 	border: 1px solid #f300b4;
 	color: #f300b4;
@@ -125,7 +125,7 @@ button:hover {
 	outline: none;
 }
 
-button:active {
+.button:active {
 	background: transparent;
 	border: 1px solid #f300b4;
 	color: #f300b4;
@@ -136,12 +136,12 @@ button:active {
 	border-right: 2px solid;
 }
 
-button:disabled {
+.button:disabled {
 	opacity: .4;
 	cursor: not-allowed;
 }
 
-button:disabled:hover {
+.button:disabled:hover {
 	background: #f300b4;
 	border: 1px solid transparent;
 	color: #fafafa;
