--- a/src/routes/Game/Game.module.css
+++ b/src/routes/Game/Game.module.css
@@ -1,4 +1,3 @@
-
 .button,
 .button:visited {
 	width: 100%;
@@ -51,4 +50,11 @@
 	background: blue;
 	border: 1px solid transparent;
 	color: #fafafa;
+}
+
+.flex {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-wrap: wrap;
 }
