--- a/src/routes/GamePage/routes/Start/Start.module.css
+++ b/src/routes/GamePage/routes/Start/Start.module.css
@@ -15,7 +15,7 @@
 
 .button,
 .button:visited {
-	background: blue;
+	background: #f300b4;
 	border: 1px solid transparent;
 	color: #fafafa;
 	font-weight: bold;
@@ -24,16 +24,16 @@
 
 .button:hover {
 	background: transparent;
-	border: 1px solid blue;
-	color: blue;
+	border: 1px solid #f300b4;
+	color: #f300b4;
 	transition: all ease-in-out 0s;
 	outline: none;
 }
 
 .button:active {
 	background: transparent;
-	border: 1px solid blue;
-	color: blue;
+	border: 1px solid #f300b4;
+	color: #f300b4;
 	transition: all ease-in-out 0s;
 	outline: none;
 	padding: 1.05rem 1rem calc(.95rem - 1px) calc(1rem - 1px);
@@ -47,25 +47,19 @@
 }
 
 .button:disabled:hover {
-	background: blue;
+	background: #f300b4;
 	border: 1px solid transparent;
 	color: #fafafa;
 }
 
 .flex {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-wrap: wrap;
+	display: grid;
+	grid-template-columns: auto auto auto;
+	grid-gap: 40px;
 }
 
-.buttonbox {
-	display: flex;
-	flex-wrap: wrap;
-	max-width: 240px;
-}
-
-.addCard {
-	margin-top: 10px;
-	background: #f300b4;
+.card {
+	width: 100%;
+	height: 380px;
+	cursor: pointer;
 }
